  (Mark Shinwell, review by Nicolás Ojeda Bär)

- #10404: Add a generic backward dataflow analyzer and use it to speed up
  liveness analysis
  (Xavier Leroy, review by Gabriel Scherer, Greta Yorsh, Mark Shinwell)

### Type system:

* #10081: Typecheck `x |> f` and `f @@ x` as `(f x)`
  (Alain Frisch, review by Jacques Garrigue, Josh Berdine and Thomas Refis)

### Standard library:

- #9448: Add String.{empty,cat} as dual of Bytes.{empty,cat},
  String.{of,to}_bytes as aliases of Bytes.{to,of}_string,
  Bytes.split_on_char as dual of String.split_on_char, and binary decoding
  functions in String to match those in Bytes.
  (David Allsopp, review by Damien Doligez, Gabriel Scherer and others)

- #9533: Added String.starts_with and String.ends_with.
  (Bernhard Schommer, review by Daniel Bünzli, Gabriel Scherer and
  Alain Frisch)

- #9582: Add Array.{find_opt,find_map,split,combine}.
  (Nicolás Ojeda Bär, review by Daniel Bünzli and Gabriel Scherer)

- #10097: Lazy.map, Lazy.map_val: ('a -> 'b) -> 'a Lazy.t -> 'b Lazy.t
  (map f x) is always (lazy (f (force x))), whereas (map_val f x)
  applies f directly if x is already forced.
  (Gabriel Scherer, review by Nicolás Ojeda Bär, Alain Frisch, Xavier Leroy,
   Daniel Bünzli and Stephen Dolan)

* #10169, #10270, #10301: Use capitalized module names in the Standard Library
  prefixing scheme to match Dune, e.g. Stdlib__String instead of Stdlib__string.
  This is a breaking change only to code which attempted to use the internal
  names before. The Standard Library generated by the Dune rules is now
  equivalent to the main build (the Dune rules still do not generate a
  distributable compiler).
  (David Allsopp and Mark Shinwell, review by Gabriel Scherer)

- #10242: Added convenience pretty printer for Either.t in the Format module.
  (Oghenevwogaga Ebresafe, review by Nicolás Ojeda Bär,
  Gabriel Scherer and Xavier Van de Woestyne)

- #10352: Seq.(concat : 'a t t -> 'a t)
  Seq.concat_map as an alias to Seq.flat_map,